// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.perpetualtask.instancesync;

option java_multiple_files = true;

message K8sInstanceSyncPerpetualTaskParams {
  string account_id = 1;
  repeated K8sDeploymentRelease k8s_deployment_release_list = 2;
}

message K8sDeploymentRelease {
  bytes k8s_infra_delegate_config = 1;
  repeated string namespaces = 2;
  string release_name = 3;
}
